--- a/index.html
+++ b/index.html
@@ -129,17 +129,21 @@
             <Headdots />
         </div>
     </div>
-    <section class="bg-amplify d-flex flex-column position-relative z-1">
+    <section class="bg-amplify bg-black d-flex flex-column position-relative z-1">
         <!-- <div class="container"> -->
-        <h2 class="mt-3 mb-0 fs-4xl fw-800 font-plus-sans lh-119 text-center text-white">Amplify and Stretch Gains
-        </h2>
-        <div class="flex-grow-1 d-flex justify-content-center align-items-center">
-            <p class="fs-xs mb-0 fw-normal mt-29 text-center lh-160 text-white max-w-544 mx-auto font-raleway">We
-                take a different balanced approach to finding and creating yield opportunities in the everchanging
-                crypto market. Our
-                yield strategies help users stay protected and hedged during bear markets and amplify yield during
-                bull markets without
-                resorting to leverage or other dangerous techniques.</p>
+        <div class="container flex-grow-1 d-flex flex-column w-100">
+            <h2 class="mt-3 mb-0 fs-4xl fw-800 font-plus-sans lh-119 text-center text-white">Amplify and
+                Stretch Gains
+            </h2>
+            <div
+                class="flex-grow-1  d-flex justify-content-center align-items-md-center pb-5 pb-md-0 align-items-end">
+                <p class="fs-xs mb-0 fw-normal mt-29 text-center lh-160 text-white max-w-544 mx-auto font-raleway">We
+                    take a different balanced approach to finding and creating yield opportunities in the everchanging
+                    crypto market. Our
+                    yield strategies help users stay protected and hedged during bear markets and amplify yield during
+                    bull markets without
+                    resorting to leverage or other dangerous techniques.</p>
+            </div>
         </div>
         <!-- </div> -->
         <img class="set-bottom-cloud" src="./assets/images/webp/cloud-bottom.webp" alt="cloud-bottom">
