--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Primary Meta Tags -->
-    <title>eefi</title>
     <meta name="title" content="eefi" />
     <meta name="description"
         content="We take a different balanced approach to finding and creating yield opportunities in the everchanging crypto market. Our yield strategies help users stay protected and hedged during bear markets and amplify yield during bull markets without resorting to leverage or other dangerous techniques." />
@@ -95,7 +94,10 @@
                                     class="mb-0 font-raleway  fw-normal c-blue-300 d-flex align-items-center justify-content-center">More</a>
                             </div>
                         </li>
-                        <button class="btn-enter text-white border-white d-md-none position-relative z-2">Enter App</button>
+                        <li>
+                            <a href="#" class="btn-enter text-white border-white d-md-none position-relative z-2">Enter
+                                App</a>
+                        </li>
                     </ul>
                     <button class="btn-enter d-lg-block d-none position-relative z-2">Enter App</button>
                 </div>
@@ -259,24 +261,22 @@
                                     class='mb-0 font-neueregular fs-2xl fw-normal lh-119 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
-                                    <div>
-                                        <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
-                                                class="fw-semibold text-white">Yield Received</span> $OHM</li>
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
+                                            class="fw-semibold text-white">Yield Received</span> $OHM</li>
 
-                                        <li
-                                            class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
-                                            <span>
-                                                3.</span>These vault strategies will enable users to participate in
-                                            Olympus’ bond markets on Bond Protocol and automatically earn
-                                            $OHM rewards in addition to other tokens.
-                                        </li>
-                                        <li
-                                            class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
-                                            <span>
-                                                3.</span> Bond Protocol markets for other token bonds will be enabled
-                                            over time.
-                                        </li>
-                                    </div>
+                                    <li
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        <span>
+                                            3.</span>These vault strategies will enable users to participate in
+                                        Olympus’ bond markets on Bond Protocol and automatically earn
+                                        $OHM rewards in addition to other tokens.
+                                    </li>
+                                    <li
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        <span>
+                                            3.</span> Bond Protocol markets for other token bonds will be enabled
+                                        over time.
+                                    </li>
                                 </ul>
 
                             </div>
@@ -315,26 +315,23 @@
                                     class='mb-0 font-neueregular fs-2xl fw-normal lh-119 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
-                                    <div>
-                                        <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
-                                                class="fw-semibold text-white">Deposit
-                                                Token:</span> $OHM</li>
-                                        <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 2. <span
-                                                class="fw-semibold text-white">Yield Received:</span> $OHM, $DAI</li>
-                                        <li
-                                            class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
-                                            <span>
-                                                3.</span> This
-                                            strategy gives depositors a chance to participate in Olympus’s growing Real
-                                            Yield econOHMy. Similar to Forex market
-                                            trading this vault will automatically participate in Ranged-Bound Stability
-                                            (RBS), an automated, decentralized mechanism
-                                            that helps $OHM to maintain its stability. Users can stake $OHM in exchange
-                                            for $OHM or $DAI rewards 
-                                        </li>
-                                    </div>
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
+                                            class="fw-semibold text-white">Deposit
+                                            Token:</span> $OHM</li>
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 2. <span
+                                            class="fw-semibold text-white">Yield Received:</span> $OHM, $DAI</li>
+                                    <li
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        <span>
+                                            3.</span> This
+                                        strategy gives depositors a chance to participate in Olympus’s growing Real
+                                        Yield econOHMy. Similar to Forex market
+                                        trading this vault will automatically participate in Ranged-Bound Stability
+                                        (RBS), an automated, decentralized mechanism
+                                        that helps $OHM to maintain its stability. Users can stake $OHM in exchange
+                                        for $OHM or $DAI rewards 
+                                    </li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
