--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <header class='bg-header'>
         <div class='container position-relative z-3'>
-            <div class='d-flex fix_nav align-items-center justify-content-between py-lg-1 py-2 bg_blue'>
+            <div class='d-flex fix_nav align-items-center justify-content-between py-lg-1 py-2'>
                 <a href="#"><img src="./assets/images/webp/page-logo.webp" alt="Pagelogo" class='max-w-68 w-100' /></a>
                 <div class='d-flex align-items-center justify-content-between gap-btn'>
                     <a onclick="HANDLE_NAV_OPEN()" id="show-nav" href="#"
@@ -51,28 +51,28 @@
                         <span class="line-toggle line-2"></span>
                         <span class="line-toggle line-3 "></span>
                     </a>
-                    <button class='btn-enter1 d-lg-none d-md-block d-none'>Enter App</button>
-                    <ul id="navbar" class="nav_bar">
+                    <button class='btn-enter-md d-lg-none d-md-block d-none'>Enter App</button>
+                    <ul id="navbar" class="nav-bar">
                         <li><a href="#" onclick="HANDLE_HIDE_NAV()"
-                                class='font-raleway  fw-medium text-white text-decoration-none line-hover position-relative'>About</a>
+                                class='font-raleway fw-medium text-white text-decoration-none line-hover position-relative'>About</a>
                         </li>
                         <li><a href="#" onclick="HANDLE_HIDE_NAV()"
-                                class='font-raleway  fw-medium text-white text-decoration-none line-hover position-relative'>IBO
+                                class='font-raleway fw-medium text-white text-decoration-none line-hover position-relative'>IBO
                                 Event</a></li>
                         <li><a href="#" onclick="HANDLE_HIDE_NAV()"
-                                class='font-raleway  fw-medium text-white text-decoration-none line-hover position-relative'>EEFI
+                                class='font-raleway fw-medium text-white text-decoration-none line-hover position-relative'>EEFI
                                 Tokenomics</a></li>
                         <li><a href="#" onclick="HANDLE_HIDE_NAV()"
-                                class='font-raleway  fw-medium text-white text-decoration-none line-hover position-relative'>Team</a>
+                                class='font-raleway fw-medium text-white text-decoration-none line-hover position-relative'>Team</a>
                         </li>
                         <li><a href="#" onclick="HANDLE_HIDE_NAV()"
-                                class='font-raleway  fw-medium text-white text-decoration-none line-hover position-relative'>Partners</a>
+                                class='font-raleway fw-medium text-white text-decoration-none line-hover position-relative'>Partners</a>
                         </li>
                         <li><a href="#" onclick="HANDLE_HIDE_NAV()"
-                                class='font-raleway  fw-medium text-white text-decoration-none line-hover position-relative'>Roadmap</a>
+                                class='font-raleway fw-medium text-white text-decoration-none line-hover position-relative'>Roadmap</a>
                         </li>
                         <li class='position-relative btn-more'><a href="#"
-                                class='font-raleway  fw-medium text-white text-decoration-none'>More</a>
+                                class='font-raleway fw-medium text-white text-decoration-none'>More</a>
                             <button class="btn-arrow ps-2 pb-1">
                                 <svg width="16" height="15" viewBox="0 0 16 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -83,19 +83,20 @@
                             </button>
                             <div id="dropcontent" class="dropdown-box">
                                 <a href="#" onclick="HANDLE_HIDE_NAV()"
-                                    class="mb-0 font-raleway  fw-normal c-blue-300 d-flex align-items-center justify-content-center">More</a>
+                                    class="mb-0 font-raleway fw-normal c-blue-300 d-flex align-items-center justify-content-center text-decoration-none">More</a>
                                 <a href="#" onclick="HANDLE_HIDE_NAV()"
-                                    class="mb-0 font-raleway  fw-normal c-blue-300 d-flex align-items-center justify-content-center">More</a>
+                                    class="mb-0 font-raleway fw-normal c-blue-300 d-flex align-items-center justify-content-center text-decoration-none">More</a>
                                 <a href="#" onclick="HANDLE_HIDE_NAV()"
-                                    class="mb-0 font-raleway  fw-normal c-blue-300 d-flex align-items-center justify-content-center">More</a>
+                                    class="mb-0 font-raleway fw-normal c-blue-300 d-flex align-items-center justify-content-center text-decoration-none">More</a>
                                 <a href="#" onclick="HANDLE_HIDE_NAV()"
-                                    class="mb-0 font-raleway  fw-normal c-blue-300 d-flex align-items-center justify-content-center">More</a>
+                                    class="mb-0 font-raleway fw-normal c-blue-300 d-flex align-items-center justify-content-center text-decoration-none">More</a>
                                 <a href="#" onclick="HANDLE_HIDE_NAV()"
-                                    class="mb-0 font-raleway  fw-normal c-blue-300 d-flex align-items-center justify-content-center">More</a>
+                                    class="mb-0 font-raleway fw-normal c-blue-300 d-flex align-items-center justify-content-center text-decoration-none">More</a>
                             </div>
                         </li>
                         <li>
-                            <a href="#" class="btn-enter text-white border-white d-md-none position-relative z-2">Enter
+                            <a href="#"
+                                class="btn-enter text-decoration-none text-white border-white d-md-none position-relative z-2">Enter
                                 App</a>
                         </li>
                     </ul>
@@ -103,9 +104,9 @@
                 </div>
             </div>
             <div class='head-padding row'>
-                <div class='d-flex align-items-lg-start col-lg-6 align-items-center justify-content-center flex-column'>
+                <div class='d-flex pt-lg-162 align-items-lg-start col-lg-6 align-items-center flex-column'>
                     <h2
-                        class='mb-0 font-neueregular fs-5xl fw-medium text-white max-w-lg-463 text-uppercase text-center text-lg-start lh-112 pb-4'>
+                        class='mb-0 font-neueregular fs-5xl fw-medium text-white max-w-lg-463 text-uppercase text-center text-lg-start lh-112 pb-2 pb-lg-4'>
                         Building
                         elastic
                         Protocol</h2>
@@ -114,14 +115,16 @@
                         An ecosystem of unique yield strategies that help you earn yield, amplify, and stretch it across
                         all
                         market conditions</p>
-                    <a href='#' class='mb-0 font-raleway fs-md fw-bold text-white text-decoration-underline'>Audited by
+                    <a href='#'
+                        class='mb-0 font-raleway fs-md fw-bold text-white position-relative z-1 text-decoration-none text-decoration-underline-after'>Audited
+                        by
                         Omniscia</a>
                 </div>
                 <div class='d-flex align-items-lg-start col-lg-6 justify-content-lg-end justify-content-center'>
-                    <img src="./assets/images/webp/robotimg2.webp" alt="roboimg2"
+                    <img src="./assets/images/webp/hero-mobile.webp" alt="roboimg2"
                         class='d-lg-none d-block robo-img w-100' />
                     <img src="./assets/images/webp/hero-header.webp" alt="Roboimg"
-                        class='robo-img w-100 d-lg-block d-none' height="887" />
+                        class='robo-img w-100 d-lg-block max-xl-object-contain d-none' height="887" />
                 </div>
             </div>
         </div>
@@ -148,9 +151,9 @@
     <section class="bg-amplify bg-black d-flex flex-column position-relative z-1">
         <div class="container flex-grow-1 d-flex flex-column w-100">
             <h2 class="mt-3 mb-0 fs-4xl fw-md-800 fw-semibold font-plus-sans lh-119 text-center text-white">Amplify and
-                Stretch Gains
+                STRETCH GAINS
             </h2>
-            <div class="flex-grow-1  d-flex justify-content-center align-items-md-center pb-5 pb-md-0 align-items-end">
+            <div class="flex-grow-1 d-flex justify-content-center align-items-md-center pb-5 pb-md-0 align-items-end">
                 <p class="fs-xs mb-0 fw-normal mt-29 text-center lh-160 text-white max-w-544 mx-auto font-raleway">We
                     take a different balanced approach to finding and creating yield opportunities in the everchanging
                     crypto market. Our
@@ -163,9 +166,9 @@
     </section>
     <section class="bg-slider-blue inovation pb-60 pb-lg-80">
         <div class="container max-w-max p-0">
-            <h2 class="mb-0 px-22 pt-md-163 pt-80 fs-3xl fw-bold font-plus-sans lh-119 text-center text-white">Core
+            <h2 class="mb-0 px-22 pt-md-163 pt-80 fs-3xl fw-bold font-neueubold lh-119 text-center text-white">Core
                 Strategies</h2>
-            <p class="mt-2 px-22 mb-0 fs-xs fw-normal text-center lh-160 c-gray max-w-819 mx-auto font-raleway">Our
+            <p class="mt-2 px-22 mb-0 fs-xs fw-normal text-center lh-160 c-gray max-w-730 mx-auto font-raleway">Our
                 initial
                 strategies use powerful burgeoning trends like Real Yield, Rebase, and others to generate
                 cutting-edged
@@ -196,14 +199,15 @@
                                         <p class="font-inter text-white lh-155 fw-medium mb-0">0.00 AMPL</p>
                                     </div>
                                     <div class="layer"></div>
+                                    <div class="layer-blue"></div>
                                 </div>
                                 <p class="bold-text-bg-card font-raleway fw-bold text-white">$AMPL</p>
                             </div>
                         </div>
-                        <div class="col-lg-6  mt-5  my-lg-auto">
+                        <div class="col-lg-6 mt-5 my-lg-auto">
                             <div class="px-22">
                                 <h2
-                                    class='mb-0 font-neueregular fs-2xl fw-normal lh-119 text-capitalize text-white pb-3'>
+                                    class='mb-0 font-neueregular fs-2xl fw-normal lh-119 text-capitalize max-w-479 text-white pb-3'>
                                     Elastic Vault</h2>
                                 <p class='mb-0 font-raleway fs-lg fw-medium lh-160 text-white'>Deposit Token
                                     <span><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -251,14 +255,15 @@
                                         <p class="font-inter text-white lh-155 fw-medium mb-0">0.00 AMPL</p>
                                     </div>
                                     <div class="layer"></div>
+                                    <div class="layer-blue"></div>
                                 </div>
                                 <p class="bold-text-bg-card font-raleway fw-bold text-white">$AMPL</p>
                             </div>
                         </div>
-                        <div class="col-lg-6 mt-5  my-lg-auto">
+                        <div class="col-lg-6 mt-5 my-lg-auto">
                             <div class="px-22">
                                 <h2
-                                    class='mb-0 font-neueregular fs-2xl fw-normal lh-119 text-capitalize text-white pb-3'>
+                                    class='mb-0 font-neueregular fs-2xl fw-normal lh-119 max-w-479 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
                                     <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
@@ -305,14 +310,15 @@
                                         <p class="font-inter text-white lh-155 fw-medium mb-0">0.00 AMPL</p>
                                     </div>
                                     <div class="layer"></div>
+                                    <div class="layer-blue"></div>
                                 </div>
                                 <p class="bold-text-bg-card font-raleway fw-bold text-white">$AMPL</p>
                             </div>
                         </div>
-                        <div class="col-lg-6 mt-5  my-lg-auto">
+                        <div class="col-lg-6 mt-5 my-lg-auto">
                             <div class="px-22">
                                 <h2
-                                    class='mb-0 font-neueregular fs-2xl fw-normal lh-119 text-capitalize text-white pb-3'>
+                                    class='mb-0 font-neueregular fs-2xl fw-normal lh-119 max-w-479 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
                                     <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
@@ -347,7 +353,8 @@
                         EEFI
                         Tokenomics
                     </h2>
-                    <p class='mb-0 font-raleway fw-normal text-black lh-160 max-md-w-448 pb-4'>EEFI is the special
+                    <p class='mb-0 font-raleway fw-normal text-black lh-160 max-md-w-448 pb-4 pe-lg-3 pe-xl-0'>EEFI is
+                        the special
                         rewards
                         token of the protocol that is minted and distributed in a decentralized fashion. It produces
                         amplified
@@ -396,7 +403,7 @@
                                     rewards token</p>
                             </div>
                         </div>
-                        <div class='d-flex align-items-lg-center align-items-start gap-20 pb-4'>
+                        <div class='d-flex align-items-xl-center align-items-start gap-20 pb-4'>
                             <span><img class="custom-icon-token" src="./assets/images/svg/smart.svg" alt="smart"></span>
                             <div>
                                 <p
@@ -409,7 +416,7 @@
                                     as an index of all strategy performance on the protocol</p>
                             </div>
                         </div>
-                        <div class='d-flex align-items-lg-center align-items-start gap-20 pb-4'>
+                        <div class='d-flex align-items-xl-center align-items-start gap-20 pb-4'>
                             <span><img class="custom-icon-token" src="./assets/images/svg/social.svg"
                                     alt="social"></span>
                             <div>
@@ -425,7 +432,7 @@
                                     produces more benefits to all vault users)</p>
                             </div>
                         </div>
-                        <div class='d-flex align-items-md-center align-items-start gap-20 pb-4'>
+                        <div class='d-flex align-items-xl-center align-items-start gap-20 pb-4'>
                             <span><img class="custom-icon-token" src="./assets/images/svg/expensive.svg" width="80"
                                     height="81" alt="expensive"></span>
                             <div>
