--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                     rewards token</p>
                             </div>
                         </div>
-                        <div class='d-flex align-items-xl-center align-items-start gap-20 pb-4'>
+                        <div class='d-flex align-items-start gap-20 pb-4'>
                             <span><img class="custom-icon-token" src="./assets/images/svg/smart.svg" alt="smart"></span>
                             <div>
                                 <p
@@ -416,7 +416,7 @@
                                     as an index of all strategy performance on the protocol</p>
                             </div>
                         </div>
-                        <div class='d-flex align-items-xl-center align-items-start gap-20 pb-4'>
+                        <div class='d-flex align-items-start gap-20 pb-4'>
                             <span><img class="custom-icon-token" src="./assets/images/svg/social.svg"
                                     alt="social"></span>
                             <div>
