--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <!-- amplify bull -->
     <section class="bg-amplify bg-black d-flex flex-column position-relative z-1 max-w-1920 mx-auto">
         <div class="container flex-grow-1 d-flex flex-column w-100">
-            <h2 class="mt-3 mb-0 fs-4xl fw-md-800 fw-semibold font-plus-sans lh-119 text-center text-white">Amplify and
+            <h2 class="mt-3 mb-0 fs-4xl fw-md-800 fw-semibold font-plus-jakarta lh-119 text-center text-white">Amplify and
                 STRETCH GAINS
             </h2>
             <div class="flex-grow-1 d-flex justify-content-center align-items-md-center pb-5 pb-md-0 align-items-end">
@@ -171,7 +171,7 @@
     </section>
     <!-- core strategies slider -->
     <section class="bg-slider-blue inovation pb-60 pb-lg-80 max-w-1920 mx-auto">
-        <div class="container max-w-max p-0">
+        <div class="container max-w-max p_0">
             <h2 class="mb-0 px-22 pt-md-163 pt-80 fs-3xl fw-bold font-neueubold lh-119 text-center text-white">Core
                 Strategies</h2>
             <p class="mt-2 px-22 mb-0 fs-xs fw-normal text-center lh-160 c-gray max-w-730 mx-auto font-raleway">Our
@@ -225,11 +225,11 @@
                                 <p class='mb-0 font-raleway fs-lg fw-medium lh-160 text-white pt-2 pb-2'>Flagship
                                     Hedging
                                     Strategy</p>
-                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'>This
+                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'>This
                                     one-of-a-kind strategy
                                     combines the benefits of Rebase’s force multiplier effect and Real Yield’s
                                     sustainability.</p>
-                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'>Helps users to
+                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'>Helps users to
                                     protect against
                                     downtrends and amplify yield rewards during market up trends.</p>
                             </div>
@@ -266,18 +266,18 @@
                                     class='mb-0 font-neueregular fs-2xl fw-normal lh-119 max-w-479 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
-                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'> 1. <span
                                             class="fw-semibold text-white">Yield Received</span> $OHM</li>
 
                                     <li
-                                        class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2 d-flex align-items-sm-start gap-1'>
                                         <span>
                                             3.</span>These vault strategies will enable users to participate in
                                         Olympus’ bond markets on Bond Protocol and automatically earn
                                         $OHM rewards in addition to other tokens.
                                     </li>
                                     <li
-                                        class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2 d-flex align-items-sm-start gap-1'>
                                         <span>
                                             3.</span> Bond Protocol markets for other token bonds will be enabled
                                         over time.
@@ -318,13 +318,13 @@
                                     class='mb-0 font-neueregular fs-2xl fw-normal lh-119 max-w-479 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
-                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 1. <span
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'> 1. <span
                                             class="fw-semibold text-white">Deposit
                                             Token:</span> $OHM</li>
-                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2'> 2. <span
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'> 2. <span
                                             class="fw-semibold text-white">Yield Received:</span> $OHM, $DAI</li>
                                     <li
-                                        class='mb-0 font-raleway fw-normal lh-160 c-gray mw-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2 d-flex align-items-sm-start gap-1'>
                                         <span>
                                             3.</span> This
                                         strategy gives depositors a chance to participate in Olympus’s growing Real
