remove max-width

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                                 <p class='mb-0 font-raleway fs-lg fw-medium lh-160 text-white pt-2 pb-2'>Flagship
                                     Hedging
                                     Strategy</p>
-                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'>This
+                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2'>This
                                     one-of-a-kind strategy
                                     combines the benefits of Rebase’s force multiplier effect and Real Yield’s
                                     sustainability.</p>
-                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'>Helps users to
+                                <p class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2'>Helps users to
                                     protect against
                                     downtrends and amplify yield rewards during market up trends.</p>
                             </div>
@@ -266,18 +266,18 @@
                                     class='mb-0 font-neueregular fs-2xl fw-normal lh-119 max-w-479 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
-                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'> 1. <span
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2'> 1. <span
                                             class="fw-semibold text-white">Yield Received</span> $OHM</li>
 
                                     <li
-                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2 d-flex align-items-sm-start gap-1'>
                                         <span>
                                             3.</span>These vault strategies will enable users to participate in
                                         Olympus’ bond markets on Bond Protocol and automatically earn
                                         $OHM rewards in addition to other tokens.
                                     </li>
                                     <li
-                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2 d-flex align-items-sm-start gap-1'>
                                         <span>
                                             3.</span> Bond Protocol markets for other token bonds will be enabled
                                         over time.
@@ -318,13 +318,13 @@
                                     class='mb-0 font-neueregular fs-2xl fw-normal lh-119 max-w-479 text-capitalize text-white pb-3'>
                                     Olympus Bond Rewards Vault</h2>
                                 <ul class="list-unstyled">
-                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'> 1. <span
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2'> 1. <span
                                             class="fw-semibold text-white">Deposit
                                             Token:</span> $OHM</li>
-                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2'> 2. <span
+                                    <li class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2'> 2. <span
                                             class="fw-semibold text-white">Yield Received:</span> $OHM, $DAI</li>
                                     <li
-                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-422 pb-2 d-flex align-items-sm-start gap-1'>
+                                        class='mb-0 font-raleway fw-normal lh-160 c-gray max-w-lg-422 pb-2 d-flex align-items-sm-start gap-1'>
                                         <span>
                                             3.</span> This
                                         strategy gives depositors a chance to participate in Olympus’s growing Real
@@ -351,7 +351,7 @@
                         EEFI
                         Tokenomics
                     </h2>
-                    <p class='mb-0 font-raleway fw-normal text-black lh-160 max-md-w-448 pb-4 pe-lg-3 pe-xl-0'>EEFI is
+                    <p class='mb-0 font-raleway fw-normal text-black lh-160 max-w-lg-448 pb-4 pe-lg-3 pe-xl-0'>EEFI is
                         the special
                         rewards
                         token of the protocol that is minted and distributed in a decentralized fashion. It produces
