max-width modify

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <p class='mb-0 font-raleway fw-semibold text-black lh-130'>170,000</p>
                 </div>
                 <div class='pt-lg-0 col-lg-6 pt-100'>
-                    <div class="max-w-511 mx-lg-auto">
+                    <div class="max-w-lg-511 max-w-515 mx-lg-auto">
                         <div class='d-flex align-items-md-center align-items-start gap-20 pb-4'>
                             <div class='cur_pointer icon_hov'>
                                 <span><img class="custom-icon-token" src="./assets/images/svg/yield.svg"
